fixed spacing of some page elements

--- a/src/app/poll/poll-new/poll-new.component.css
+++ b/src/app/poll/poll-new/poll-new.component.css
@@ -1,1 +1,8 @@
+ .response {
+  margin-bottom: 0.5em;
+ }
 
+
+#option-section {
+  margin-top: 1em;
+}
